fix filters-cards overflow

--- a/css/style.css
+++ b/css/style.css
@@ -486,7 +486,7 @@ a:link, a:visited, a:active {
 }
 
 /** iphone */
-@media screen and (max-width: 768px) and (min-width: 320px) {
+@media screen and (max-width: 768px) {
    #main-container {
         padding: 0;
         margin: 0;
@@ -497,9 +497,26 @@ a:link, a:visited, a:active {
      padding-right: 30px;  
    }
 
+   .filters {
+     margin-bottom: 20px;
+     padding-bottom: 0;
+     position: relative;
+     width: 100%;
+     max-width: 100%;
+     z-index: auto;
+   }
+
     .filters-cards {
         margin-top: 30px;
-    
+        max-height: 200px;
+        margin-bottom: 0;
+        flex-wrap: wrap;
+        overflow-x: auto;
+        max-width: 100%;
+    }
+
+    .accommodations-info {
+        margin-top: 60px;
     }
 
    .popular {
